[gd_scene load_steps=31 format=3 uid="uid://dj7i24oih1bqu"]

[ext_resource type="Script" uid="uid://btilf8w7gv1gf" path="res://scripts/player/player_scripts.gd" id="1_5dc8e"]
[ext_resource type="Texture2D" uid="uid://ch6emhg34ctmq" path="res://assets/char/the_man/The Man - Idle.png" id="1_exd8k"]
[ext_resource type="Texture2D" uid="uid://o2auijoy4643" path="res://assets/char/the_man/The Man - Jumping.png" id="2_5dc8e"]
[ext_resource type="Texture2D" uid="uid://dcd3jrorrfs4w" path="res://assets/char/the_man/The Man - Walking.png" id="3_ixbpm"]
[ext_resource type="Script" uid="uid://dry0xojk5tjre" path="res://scripts/player/camera.gd" id="5_c6leb"]
[ext_resource type="Script" uid="uid://73snois5a4yo" path="res://scripts/player/player_anim.gd" id="5_ixbpm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c6leb"]
atlas = ExtResource("1_exd8k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dirf7"]
atlas = ExtResource("1_exd8k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_idpv6"]
atlas = ExtResource("1_exd8k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpf03"]
atlas = ExtResource("1_exd8k")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dc8e"]
atlas = ExtResource("2_5dc8e")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_on558"]
atlas = ExtResource("3_ixbpm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqopd"]
atlas = ExtResource("3_ixbpm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_icpky"]
atlas = ExtResource("3_ixbpm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58jvb"]
atlas = ExtResource("3_ixbpm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l73k"]
atlas = ExtResource("3_ixbpm")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqrcq"]
atlas = ExtResource("3_ixbpm")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2agh"]
atlas = ExtResource("3_ixbpm")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpo3a"]
atlas = ExtResource("3_ixbpm")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kyfeq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6leb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dirf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idpv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpf03")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dc8e")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_on558")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqopd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icpky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58jvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l73k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqrcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2agh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpo3a")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixbpm"]
size = Vector2(6, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6leb"]
size = Vector2(6, 38)

[sub_resource type="Animation" id="Animation_1yocb"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.0709025, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.00558247, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.133468, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_5dc8e"]
resource_name = "blink"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.0709025, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.0709025, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.0727158, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.00558247, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.00558247, -0.25, 0, 0.25, 0, 0.00392157, -0.25, 0, 0.25, 0, 7.96985e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.133468, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.133468, -0.25, 0, 0.25, 0, 0.137255, -0.25, 0, 0.25, 0, 0.144552, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.196494, 0.4, 0.6, 0.8, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.196494, 0.4, 0.6, 0.8, 1)
}

[sub_resource type="Animation" id="Animation_rxat5"]
resource_name = "player_spawn"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -1, -0.0328252, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -1.03333, -0.0689522, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.0709025, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.0709025, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.0709025, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.0709025, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.8, 0.9)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.00558247, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.00558247, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.00558247, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.00558247, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.8, 0.9)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.133468, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.133468, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.133468, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.133468, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.8, 0.9)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjxiy"]
_data = {
&"RESET": SubResource("Animation_1yocb"),
&"blink": SubResource("Animation_5dc8e"),
&"player_spawn": SubResource("Animation_rxat5")
}

[sub_resource type="Animation" id="Animation_c6leb"]
resource_name = "zoom_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_dirf7"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_idpv6"]
resource_name = "zoom_in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rpf03"]
_data = {
&"RESET": SubResource("Animation_dirf7"),
&"zoom_in": SubResource("Animation_idpv6"),
&"zoom_out": SubResource("Animation_c6leb")
}

[node name="player" type="CharacterBody2D"]
modulate = Color(0.0709025, 0.00558247, 0.133468, 1)
collision_mask = 24
script = ExtResource("1_5dc8e")

[node name="anim" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_kyfeq")
animation = &"idle"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
shape = SubResource("RectangleShape2D_ixbpm")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 242

[node name="collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 5)
shape = SubResource("RectangleShape2D_c6leb")
debug_color = Color(0.738374, 0.461514, 0.211892, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_vertical_offset = -1.0
drag_top_margin = 0.0
drag_bottom_margin = 0.0
script = ExtResource("5_c6leb")

[node name="player_anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wjxiy")
}
autoplay = "player_spawn"
script = ExtResource("5_ixbpm")

[node name="camera_anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rpf03")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="camera_anim" to="Camera2D" method="_on_camera_anim_animation_finished"]
